[package]
name = "violet"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"]}
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
neofiglet = "0.1.1"
